crates/myso/src/client_ptb/snapshots/myso__client_ptb__parser__tests__parse_mvr_names_valid.snap
---
source: crates/myso/src/client_ptb/parser.rs
expression: parsed
---
[
    Spanned {
        span: Span {
            start: 0,
            end: 1,
        },
        value: Named(
            "@1/foo",
        ),
    },
    Spanned {
        span: Span {
            start: 0,
            end: 3,
        },
        value: Named(
            "1.myso/foo",
        ),
    },
    Spanned {
        span: Span {
            start: 0,
            end: 3,
        },
        value: Named(
            "1.myso/foo/1",
        ),
    },
    Spanned {
        span: Span {
            start: 0,
            end: 3,
        },
        value: Named(
            "1.myso/3/1",
        ),
    },
    Spanned {
        span: Span {
            start: 0,
            end: 1,
        },
        value: Named(
            "1.myso/3/1",
        ),
    },
    Spanned {
        span: Span {
            start: 0,
            end: 1,
        },
        value: Named(
            "@foo/bar",
        ),
    },
    Spanned {
        span: Span {
            start: 0,
            end: 1,
        },
        value: Named(
            "@foo/bar/1",
        ),
    },
    Spanned {
        span: Span {
            start: 0,
            end: 3,
        },
        value: Named(
            "foo.myso/bar",
        ),
    },
    Spanned {
        span: Span {
            start: 0,
            end: 3,
        },
        value: Named(
            "foo.myso/bar/1",
        ),
    },
]
